<resources>
    <string name="app_name">StoryAppIrfanMaiyola</string>
    <string name="password_length">Password tidak boleh kurang dari 8 karakter!</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="title_welcome_page">Silahkan Login, Klik Daftar Jika Belum Mempunyai Akun</string>
    <string name="title_register_page">Masukan data diri</string>
    <string name="message_login_page">Masukkan dulu data kamu dulu ya</string>
    <string name="title_register">Daftar / Register</string>
    <string name="title_login_page">Welcome to Bangkit Story</string>
    <string name="title_login">Formulir Masuk</string>
    <string name="email">Email</string>
    <string name="email_validation">Alamat email anda tidak valid!</string>
    <string name="password">Password</string>
    <string name="required_field">Field tidak boleh kosong!</string>
    <string name="name">Nama Pengguna</string>
    <string name="username">Halo, %1$s</string>
    <string name="logout">Keluar</string>
    <string name="add_story">Tambah Cerita</string>
    <string name="story_detail">Detail Cerita</string>
    <string name="take_picture">Ambil Gambar</string>
    <string name="open_file">Buka Gambar</string>
    <string name="desc_story">Deskripsi Story</string>
    <string name="upload_story">Upload Cerita</string>
    <string name="story">Cerita</string>
    <string name="retry">muat ulang</string>
    <string name="language">Ganti Bahasa</string>
    <string name="map">map</string>
    <string name="title_story">Judul Story</string>
    <string name="img_story">Gambar Story</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="empty_image_warning">Gambar tidak ditemukan</string>
    <string name="location_message">Lokasi Anda berhasil diizinkan</string>
</resources>