<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dicoding.appstoryirfanmaiyolaintermedietsubb2.ViewModel.viewadd.Add_Story">

    <ImageView
        android:id="@+id/iv_add_story"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/add_story"
        android:src="@drawable/inst_photo_ic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_add_story">

        <Button
            android:id="@+id/btn_take_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_picture"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="@id/iv_add_story"
            app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_add_story" />

        <Button
            android:id="@+id/btn_open_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_file"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.447"
            app:layout_constraintStart_toEndOf="@+id/btn_take_picture"
            app:layout_constraintTop_toBottomOf="@+id/iv_add_story" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_desc_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/desc_story"
        app:layout_constraintStart_toStartOf="@+id/tl_desc_story"
        app:layout_constraintTop_toTopOf="@+id/pb_add" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_desc_story"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc_story">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_desc_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="Enter Description"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tl_desc_story">

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/upload_story"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_desc_story" />
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/infoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/info_ic"
            android:contentDescription="Info"
            android:background="?android:attr/selectableItemBackground"

             />
    </LinearLayout>
    <ProgressBar
        android:elevation="2dp"
        android:id="@+id/pb_add"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>